--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-router-hash-link": "^2.4.5",
     "axios": "^0.26.0",
     "lottie-react": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
