--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-hash-link": "^2.4.5",
+    "animate.css": "^4.1.1",
     "axios": "^0.26.0",
     "lottie-react": "^2.2.1",
     "react": "^17.0.2",
+    "react-animation-on-scroll": "^5.0.0",
     "react-dom": "^17.0.2",
+    "react-fade-in": "^2.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
